--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "backend_challenge",
-  "version": "1.0.0",
-  "description": "Connect 4 game",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Maneesh K",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.17.1",
-    "nedb": "^1.8.0"
-  }
+	"name": "backend_challenge",
+	"version": "1.0.0",
+	"description": "Connect 4 game",
+	"main": "index.js",
+	"scripts": {
+		"start": "node index.js",
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"author": "Maneesh K",
+	"license": "ISC",
+	"dependencies": {
+		"express": "^4.17.1",
+		"nedb": "^1.8.0"
+	}
 }
